# github_actions_summary

./: .gitignore  README.md  collect_versions_analyzer.py  github_actions_summary.py  pyproject.toml
