[project]
name = "github-actions-summary"
version = "0.1.0"
description = "Analyze GitHub Actions workflow runs and generate step execution statistics"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "PyGithub>=1.59.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
github-actions-summary = "github_actions_summary:main"